styles/NewsTemplate.module.css
.content {
  display: grid;
  /* flex-grow: inherit; */
  gap: 2rem;
  width: 100%;
  grid-template-columns: 376px 1fr;
}

.news-poster {
  position: relative;
  width: 100%;
  margin-bottom: 1.5rem;
}

.news-poster > img {
  max-width: 100%;
  max-height: 100%;
  width: auto !important;
  height: auto !important;
}

.content-column {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-bottom: 1rem;
  margin-bottom: 1.5rem;
  gap: 10px;
}

.content-mobile {
  display: none;
}

.main-screen-mobile {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.mobile-news-poster {
  width: 160px;
  height: 230px;
  flex-shrink: 0;
  position: relative;
  align-self: flex-end;
}

.text-content-mobile {
  display: flex;
  /* flex-direction: column; */
  gap: 1rem;
}

.text-content {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
}

.title {
  font-size: 1.25rem;
  font-weight: 700;
  text-align: left;
}

.description {
  text-align: left;
  font-weight: 600;
  color: #d9d9d9;
  font-size: 0.8rem;
}
.subdescription {
  text-align: left;
  font-weight: 600;
  color: #d9d9d9;
  font-size: 0.8rem;
}

.cta-button {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #000;
  padding: 1rem 2rem 1rem 2rem;
  width: clamp(200px, 75%, 900px);
  height: 40px;
  border-radius: 41px;
}

.cta-button:hover {
  cursor: pointer;
}

.cta-text {
  font-weight: 700;
  font-size: 1rem;
}

@media (min-width: 768px) {
  .title {
    font-size: 2.875rem;
  }

  .description {
    font-size: 0.9rem;
  }
  .subdescription {
    font-size: 0.9rem;
  }

  .cta-button {
    height: 55px;
  }
}

@media (max-width: 767px) {
  .news-poster {
    display: none;
  }
  .content-column {
    display: none;
  }

  .content-mobile {
    display: flex;
    width: 80vw;
    min-height: fit-content;
    flex-direction: column;
    gap: 1.5rem;
  }
  .title {
    text-align: center;
    font-size: 2rem;
  }
}

@media (min-width: 768px) {
  .header-content {
    width: 70%;
  }
}

@media (min-width: 1024px) {
  .header-content {
    width: 70%;
  }
}

